--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,123 @@
 * {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 body {
   background-color: #177c2c;
+  font-family: "Poppins", sans-serif;
+  color: #fff;
 }
+
+/* THIS IS A THE HEADER SECTION CSS BEGINNING*/
+
+header {
+  display: flex;
+  flex-direction: row;
+  background-color: #127727;
+  min-width: 100%;
+  float: left;
+  padding-left: 70px;
+  margin: 0 auto;
+  align-items: center;
+  height: 120px;
+  margin-bottom: 100px;
+}
+.logo {
+  width: 195px;
+  height: 36px;
+}
+nav {
+  padding-left: 0px;
+}
+
+nav > ul {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  list-style-type: none;
+  padding-left: 390px;
+}
+
+a {
+  text-decoration: none;
+  color: #fff;
+  font-size: 20px;
+  font-weight: 500;
+}
+
+a:hover {
+  color: #00c684;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+nav > ul > li {
+  padding-right: 32px;
+}
+
+button {
+  border-radius: 43px;
+  stroke: none;
+  width: 200px;
+  height: 36px;
+  border: none;
+  line-height: auto;
+  font-weight: 500;
+  color: #3f9651;
+  font-size: 20px;
+}
+
+/* THIS IS A THE HEADER SECTION CSS ENDING*/
+
+/* THIS IS A THE HERO SECTION CSS BEGINNING*/
+.hero-section {
+  display: flex;
+  width: 100%;
+  padding-left: 70px;
+  margin-bottom: 200px;
+}
+
+.hero-text {
+  margin-right: 78px;
+}
+.hero-text h1 {
+  color: #fff;
+  font-size: 48.83px;
+  font-weight: 900;
+  width: 572px;
+  line-height: 56px;
+  height: 112px;
+}
+
+.hero-text p {
+  color: #fff;
+  opacity: 0.75;
+  font-size: 16px;
+  width: 464px;
+  font-weight: 300;
+  height: 138px;
+  margin-top: 10px;
+  line-height: 24px;
+}
+
+.hero-image img {
+  width: 500px;
+  height: 305px;
+  border-radius: 8px;
+}
+
+.hero-button {
+  margin-top: 8px;
+}
+
+.hero-button .no-fill {
+  border: 1px solid #fff;
+  background-color: transparent;
+  color: #fff;
+  margin-left: 32px;
+}
+
+/* THIS IS A THE HERO SECTION CSS ENDING*/
