--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,22 @@ body {
   background-color: #177c2c;
   font-family: "Poppins", sans-serif;
   color: #fff;
+  margin: 0;
+  padding: 0;
+}
+
+p {
+  color: #fff;
+  opacity: 0.75;
+  font-size: 16px;
+  font-weight: 300;
+  line-height: 24px;
+}
+
+h2 {
+  color: #3f9651;
+  font-size: 39.1px;
+  font-weight: 600;
 }
 
 /* THIS IS A THE HEADER SECTION CSS BEGINNING*/
@@ -90,6 +106,7 @@ button {
   width: 572px;
   line-height: 56px;
   height: 112px;
+  margin-top: 0;
 }
 
 .hero-text p {
@@ -121,3 +138,73 @@ button {
 }
 
 /* THIS IS A THE HERO SECTION CSS ENDING*/
+
+/* THIS IS A THE PRODUCTS SECTION CSS BEGINNING*/
+.products {
+  background-color: #fff;
+  background-size: cover;
+  height: auto;
+  min-width: 100%;
+  float: left;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.section-h2 {
+  color: #3f9651;
+  font-size: 39.1px;
+  font-weight: 600;
+  margin: 64px auto;
+}
+.cards {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  position: relative;
+  margin-left: 70px;
+}
+
+.card {
+  width: 450px;
+  height: 500px;
+  border-radius: 36px;
+  background: #177c2c;
+  margin-bottom: 160px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 100px;
+  margin-right: 64px;
+}
+
+.card img {
+  width: 250px;
+  height: 260px;
+}
+.card p {
+  width: 250px;
+  margin: 0;
+  margin-top: 10px;
+}
+.card h2 {
+  color: #fff;
+  font-size: 28px;
+  margin: 0;
+  padding-top: 10px;
+}
+.card button {
+  margin-top: 8px;
+}
+
+.cards .linking-image {
+  position: absolute;
+  z-index: 99;
+  top: 480px;
+}
+.linking-image img {
+  width: 200px;
+  height: 200px;
+}
+
+/* THIS IS A THE PRODUCTS SECTION CSS ENDING*/
