--- a/styles.css
+++ b/styles.css
@@ -209,3 +209,56 @@ button {
 }
 
 /* THIS IS A THE PRODUCTS SECTION CSS ENDING*/
+
+.testimonial {
+  background-color: #177c2c;
+  height: 700px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.testimonial h2 {
+  color: #fff;
+  margin: 48px auto;
+}
+
+.testimonial-card {
+  background-color: #fff;
+  width: 1000px;
+  height: 450px;
+  border-radius: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.testimonial-card img {
+  height: 280px;
+  width: 260px;
+  margin-left: 100px;
+}
+
+.testimonial-card p {
+  line-height: auto;
+  font-weight: 500;
+  color: #177c2c;
+  font-size: 20px;
+}
+
+.testimonial-card p span {
+  padding-top: 24px;
+  color: #177c2c;
+  display: block;
+
+  line-height: 32px;
+  font-weight: 800;
+}
+
+.testimonial-text {
+  margin-left: 70px;
+  margin-top: -78px;
+  width: 420px;
+}
