--- a/styles.css
+++ b/styles.css
@@ -262,3 +262,81 @@ button {
   margin-top: -78px;
   width: 420px;
 }
+
+/* NEWSLETTER SECTION CSS */
+
+.newsletter {
+  background-color: #fff;
+  opacity: 90%;
+  height: 450px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 48px;
+  padding-top: 64px;
+}
+
+.newsletter p {
+  color: #177c2c;
+  width: 720px;
+  align-items: center;
+  padding: 16px;
+  margin-bottom: 64px;
+  height: 48px;
+  text-align: center;
+  display: block;
+}
+.newsletter h2 {
+  color: #127727;
+}
+
+.newsletter form {
+  background-color: #127727;
+  width: 670px;
+  height: 64px;
+  display: flex;
+  border-radius: 32px;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.newsletter form .email {
+  background-color: transparent;
+  border: none;
+  margin-left: 48px;
+  height: 32px;
+  width: 300px;
+}
+.newsletter form ::placeholder {
+  color: #fff;
+  opacity: 0.9; /* Firefox */
+}
+
+.newsletter form ::-ms-input-placeholder {
+  /* Edge 12 -18 */
+  color: #fff;
+}
+
+input[type="text"],
+input[type="email"],
+input[type="password"],
+textarea,
+select {
+  outline: none;
+  caret-color: white;
+}
+input,
+select,
+textarea {
+  color: #fff;
+}
+
+.subscribe {
+  background-color: #fff;
+  color: #127727;
+  border: none;
+  border-radius: 32px;
+  margin-right: 16px;
+  width: 220px;
+  height: 42px;
+}
