--- a/weather.css
+++ b/weather.css
@@ -84,200 +84,69 @@ button {
   font-size: 20px;
 }
 
-/* THIS IS A THE HEADER SECTION CSS ENDING*/
-
-/* THIS IS A THE HERO SECTION CSS BEGINNING*/
-.hero-section {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  width: 100%;
-  background-color: #177c2c;
-  padding: 100px 70px;
-  height: auto;
-}
-
-.hero-text {
-  margin-right: 10px;
-  margin-bottom: 48px;
-}
-.hero-text h1 {
-  color: #fff;
-  font-size: 48.83px;
-  font-weight: 900;
-  width: 572px;
-  line-height: 56px;
-  height: 112px;
-  margin-top: 0;
-}
-
-.hero-text p {
-  color: #fff;
-  opacity: 0.75;
-  font-size: 16px;
-  width: 464px;
-  font-weight: 300;
-  height: 138px;
-  margin-top: 10px;
-  line-height: 24px;
-}
-
-.hero-image img {
-  width: 500px;
-  height: 305px;
-  border-radius: 8px;
-}
-
-.hero-button {
-  margin-top: 8px;
-}
-
-.hero-button .no-fill {
-  border: 1px solid #fff;
-  background-color: transparent;
-  color: #fff;
-  margin-left: 32px;
-}
-
-/* THIS IS A THE PRODUCTS SECTION CSS BEGINNING*/
-
-.products {
-  background-color: #fff;
-  background-size: cover;
-  height: auto;
-  min-width: 100%;
-  float: left;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.section-h2 {
-  color: #3f9651;
-  font-size: 39.1px;
-  font-weight: 600;
-  margin: 64px auto;
-}
-.cards {
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-  position: relative;
-  margin-left: 70px;
-}
-
-.card {
-  width: 450px;
-  height: 500px;
-  border-radius: 36px;
-  background: #177c2c;
-  margin-bottom: 160px;
+/* THIS IS A THE WEATHER SECTION CSS BEGINNING*/
+.weather {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
+  background-color: #fff;
+  width: 100%;
+  height: auto;
   padding: 100px;
-  margin-right: 64px;
+  padding-bottom: 150px;
 }
 
-.card img {
-  width: 250px;
-  height: 260px;
-}
-.card p {
-  width: 250px;
-  margin: 0;
-  margin-top: 10px;
-}
-.card h2 {
-  color: #fff;
-  font-size: 28px;
-  margin: 0;
-  padding-top: 10px;
-}
-.card button {
-  margin-top: 8px;
+.weather .heading h1 {
+  color: #127727;
+  text-align: center;
+  font-weight: 900;
+  font-size: 48.83px;
+  line-height: 64px;
+  margin-bottom: 64px;
 }
 
-.cards .linking-image {
-  position: absolute;
-  z-index: 99;
-  top: 480px;
-  left: 465px;
-}
-.linking-image img {
-  width: 200px;
-  height: 200px;
-}
-
-/* THIS IS A THE PRODUCTS SECTION CSS ENDING*/
-
-/* THIS IS A THE TESTIMONIAL SECTION CSS BEGINNING*/
-.testimonial {
-  background-color: #177c2c;
+.weather-dashboard img {
   height: auto;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  padding-bottom: 100px;
+  width: 90%;
+  border-radius: 36px;
+  margin-left: 64px;
 }
 
-.testimonial h2 {
+.time-forecast {
+  width: 80%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #127727;
+  border-radius: 12px;
+  margin-top: 36px;
+  padding: 16px 48px;
+}
+
+.time-forecast h2 {
   color: #fff;
-  margin: 48px auto;
-}
-
-.testimonial-card {
-  background-color: #fff;
-  height: auto;
-  padding: 100px 64px;
-  width: 70%;
-  border-radius: 30px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.testimonial-card img {
-  height: 280px;
-  width: 260px;
-  margin-left: 100px;
-}
-
-.testimonial-card p {
-  line-height: auto;
-  font-weight: 500;
-  color: #177c2c;
-  font-size: 20px;
-}
-
-.testimonial-card p span {
-  padding-top: 24px;
-  color: #177c2c;
   display: block;
-
-  line-height: 32px;
-  font-weight: 800;
 }
 
-.testimonial-text {
-  margin-left: 70px;
-  margin-top: -38px;
-  padding: 16px;
-  width: 420px;
+.time-forecast a:hover,
+.time-forecast h2:hover {
+  background-color: #fff;
+  color: #177c2c;
+  border-radius: 42px;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 /* THIS IS A THE NEWSLETTER SECTION CSS BEGINNING*/
 
 .newsletter {
   background-color: #fff;
-  opacity: 90%;
+  opacity: 0.9;
   height: 450px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 48px;
   padding-top: 64px;
 }
 
